# hypothesis-bio

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  CONTRIBUTING.rst  HACKSEQ.md  LICENSE  README 2.md  README.md  api.html  contributing.html  guide.html  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build_docs.yml  continuous-integration.yml
api/: blast6.html  fasta.html  fastq.html  index.html  sequence_identifiers.html  sequences.html
assets/css/: 0.styles.06cd1d99.css  0.styles.0a1176e4.css  0.styles.555680fa.css  0.styles.5700bd5c.css  0.styles.6fd8549c.css  0.styles.7ba1451a.css
assets/js/: 10.98337d53.js  10.ba7c13d9.js  10.e03c6bce.js  11.41bca192.js  11.4bed8878.js  11.a43d81fb.js  11.c3ffb873.js  12.9c043794.js  12.a5a005eb.js  12.f25ff585.js  13.32f76e3d.js  (+163 more)
conda.recipe/: meta.yaml
docs/: Makefile  README.md  api.md  conf.py  guide.md  index.rst  installation.rst  make.bat  package-lock.json  package.json  pydoc-markdown.yml  requirements.txt  usage.rst  write_stdin_to_file.py
hypothesis_bio/: __init__.py  blast6.py  cli.py  fasta.py  fastq.py  gff.py  hypothesis_bio.py  pdb.py  sequence_identifiers.py  sequences.py  strategy_blast6.py  strategy_pdb.py  to_filehandler.py  utilities.py
paper/: README.md  paper.bib  paper.md
tests/: minimal.py  test_blast6.py  test_cds.py  test_dna.py  test_fasta.py  test_fastq.py  test_gff.py  test_kmers.py  test_pdb.py  test_protein.py  test_rna.py  test_to_filehandler.py
(+3 files in other folders)
